docs/2.6/_sources/IEdgeInsights/common/util/c/installation.rst.txt

Installation
------------

.. note::  This is a mandatory step to use this library in
   C/C++ EII modules and EII Message Bus library.


If you wish to install the EII Utils on your system, execute the
following command after building the library:

.. code-block:: sh

   $ sudo make install

By default, this command will install the EII Utils C library into
``/opt/intel/eii/lib/``. On some platforms this is not included in the ``LD_LIBRARY_PATH``
by default. As a result, you must add this directory to you ``LD_LIBRARY_PATH``.
This can be accomplished with the following ``export``\ :

.. code-block:: sh

   $ export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/opt/intel/eii/lib/

.. note::  You can also specify a different library prefix to CMake through
   the ``CMAKE_INSTALL_PREFIX`` flag. If different installation path is given via ``CMAKE_INSTALL_PREFIX``\ , then ``$LD_LIBRARY_PATH`` should be appended by $CMAKE_INSTALL_PREFIX/lib.

