docs/3.0/_sources/IEdgeInsights/common/util/c/installation.rst.txt

Installation
------------

.. note::  This is a mandatory step to use this library in
   C/C++ OEI modules and Message Bus library.


The OEI Utils library can be installed in two different ways.


#. Through published Debian, Fedora, or Alpine APK packages
#. Installing form source

If you are installing from one of the packages, select the package you wish to
install from the releases assets, and then run one of the following depending
on the OS you are installing on:

.. code-block:: sh

   # Debian
   sudo apt install libcjson1
   sudo dpkg -i <debian package>

   # Fedora
   sudo dnf install cjson
   sudo rpm -i <rpm package>

   # Alpine (NOTE: the depencies get automatically installed by the apk command)
   sudo apk add --allow-untrusted <apk package>

.. note::  In the above commands, installing the cJSON dependency is required,
   however, in general installation of the dev module is not required. However,
   when building against this library the installing the dev version of the
   library is required. For Ubuntu this is ``libcjson-dev``\ , Fedora is ``cjson-devel``
   and Alpine is ``cjson-dev``.


If you wish to install the OEI Utils on your system from source, execute the
following command after building the library:

.. code-block:: sh

   sudo make install

By default, this command will install the OEI Utils C library into
``/opt/intel/eii/lib/``. On some platforms this is not included in the ``LD_LIBRARY_PATH``
by default. As a result, you must add this directory to you ``LD_LIBRARY_PATH``.
This can be accomplished with the following ``export``\ :

.. code-block:: sh

   export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/opt/intel/eii/lib/

.. note::  You can also specify a different library prefix to CMake through
   the ``CMAKE_INSTALL_PREFIX`` flag. If different installation path is given via ``CMAKE_INSTALL_PREFIX``\ , then ``$LD_LIBRARY_PATH`` should be appended by $CMAKE_INSTALL_PREFIX/lib.

